# project_articubot

./: .gitignore
log/: latest_build
src/: command_line_ros2  guild_install_ros2_humble.txt
src/ROSArduinoBridge/: ROSArduinoBridge.ino  encoder_driver.h  encoder_driver.ino  servos.h  servos.ino
src/articubot_moveit/: package.xml
src/articubot_moveit/config/: articubot.srdf  joint_limits.yaml  kinematics.yaml  moveit2.rviz  moveit_controllers.yaml  ompl_planning.yaml
src/articubot_moveit/launch/: moveit.launch.py
src/articubot_msgs/: CMakeLists.txt  package.xml
src/articubot_msgs/action/: ArduinobotTask.action  ArticubotTask.action
src/articubot_msgs/msg/: InferenceResult.msg
src/articubot_one/config/: mapper_params_online_async.yaml  my_controllers.yaml  nav2_param1.yaml  new_map.rviz
src/articubot_one/description/: arm_robot.xacro  camera.xacro  depth_camera.xacro  face.xacro  gazebo_control.xacro  lidar.xacro  robot.urdf.xacro  robot_core.xacro  ros2_control.xacro
src/articubot_one/launch/: launch_robot.launch.py  launch_sim.launch.py  navigation1.launch.py  rsp.launch.py
src/articubot_one/map/: maze.yaml  my_map_ob.pgm  my_map_ob.yaml
src/articubot_one/worlds/: cafe.world
src/articubot_remote/: CMakeLists.txt  package.xml
src/articubot_remote/articubot_remote/: alexa_interface.py  move_to_point_action_server.py  pnp_client.py  task_server.py  test.py  test_server.py
src/articubot_remote/config/: qos_override.yaml
src/articubot_remote/launch/: remote_interface.launch.py
src/articubot_remote/src/: pick_and_place_node.cpp  task_server_articubot.cpp  test_server.cpp
src/diffdrive_arduino/: CMakeLists.txt
src/diffdrive_arduino/hardware/: diffbot_system.cpp
src/hello_moveit_test/: CMakeLists.txt  package.xml
src/hello_moveit_test/src/: hello_moveit_test.cpp
src/robot_recognition/: CMakeLists.txt  package.xml
src/robot_recognition/launch/: launch_yolov8.launch.py
src/robot_recognition/scripts/: robot_ros2_reg.py  test_depth_coordinate.py  yolov8_ros2_pt.py
src/robot_rosgpt/: package.xml  setup.cfg  setup.py
src/robot_rosgpt/launch/: robot_ros.launch.py
src/robot_rosgpt/robot_rosgpt/: rosgpt.py  rosgpt_nav.py
src/robot_speech_to_text/: package.xml  readme.md  setup.cfg  setup.py
src/robot_speech_to_text/launch/: speech_to_text.launch.py
src/robot_speech_to_text/robot_speech_to_text/: api_key_manager.py  api_local.py  config.py  speech_to_text_node.py  speech_to_text_whisper_node.py
src/robot_speech_to_text/submodules/: config.ini  utilities.py
src/ros2_robot_ui/: package.xml  setup.cfg  setup.py
src/ros2_robot_ui/ros2_robot_ui/: my_ros2_robot_ui.py
src/serial/include/serial/: serial.h
src/test_pubsub/: package.xml  setup.cfg  setup.py
src/test_pubsub/test_pubsub/: host_data_publisher.py  host_data_subscriber.py
(+6 files in other folders)
